# Regard3D

./: .gitignore  README.md  version.txt
src/: CMakeLists.txt  CommonIncludes.h  R3DComputeMatches.cpp  R3DComputeMatches.h  R3DDensificationProcess.cpp  R3DDensificationProcess.h  R3DModelOperations.cpp  R3DModelOperations.h  R3DProject.cpp  R3DProject.h  R3DSurfaceGenProcess.cpp  R3DSurfaceGenProcess.h  Regard3DApp.cpp  Regard3DApp.h  Regard3DDropTarget.cpp  Regard3DDropTarget.h  Regard3DFeatures.cpp  Regard3DFeatures.h  Regard3DMainFrame.cpp  Regard3DMainFrame.h  Regard3DMainFrameBase.cpp  Regard3DMainFrameBase.h  Regard3DModelViewHelper.cpp  Regard3DModelViewHelper.h  config.h.in  getenv_mingw_workaround.c  version.h
src/cmake/: EchoTargetProperties.cmake  FindVLFEAT.cmake
src/gl/: CMakeLists.txt  GraphicsWindowWX.cpp  GraphicsWindowWX.h  OSGGLCanvas.cpp  OSGGLCanvas.h  SharedGLContext.cpp  SharedGLContext.h
src/gui/: CMakeLists.txt  ImagePanel.cpp  ImagePanel.h  PreviewCanvas.cpp  PreviewCanvas.h  R3DImageUpdatesInterface.h  R3DNewProjectDialog.cpp  R3DNewProjectDialog.h  R3DResultDialog.cpp  R3DResultDialog.h  Regard3DComputeMatchesDialog.cpp  Regard3DComputeMatchesDialog.h  Regard3DConsoleOutputFrame.cpp  Regard3DConsoleOutputFrame.h  Regard3DDensificationDialog.cpp  Regard3DDensificationDialog.h  Regard3DImagePreviewDialog.cpp  Regard3DImagePreviewDialog.h  Regard3DMatchingResultsDialog.cpp  Regard3DMatchingResultsDialog.h  Regard3DPictureSetDialog.cpp  Regard3DPictureSetDialog.h  Regard3DProgressDialog.cpp  Regard3DProgressDialog.h  Regard3DPropertiesDialog.cpp  Regard3DPropertiesDialog.h  Regard3DSurfaceDialog.cpp  Regard3DSurfaceDialog.h  Regard3DTriangulationDialog.cpp  Regard3DTriangulationDialog.h  Regard3DUserCameraDBDialog.cpp  Regard3DUserCameraDBDialog.h
src/install/: Regard3D_MinGW64.nsi  Regard3D_msvc2015.nsi  create_setup_mingw64.bat  create_setup_msvc2015.bat
src/licenses/: Copyright.txt
src/res/: Regard3dMainFrameBase.fbp
src/res/osx/: regard3d-Info.plist.in  regard3d.icns
src/res/png/: document-new_zopflifull.c  document-open.c  document-open_zopflifull.c  icons_png.h  regard3d_zopfli.c  zopfli_opt.txt
src/res/win/: regard3d.rc
src/threads/: CMakeLists.txt  ImageInfoThread.cpp  ImageInfoThread.h  PreviewGeneratorThread.cpp  PreviewGeneratorThread.h  R3DComputeMatchesThread.cpp  R3DComputeMatchesThread.h  R3DFeaturesThread.cpp  R3DFeaturesThread.h  R3DSmallTasksThread.cpp  R3DSmallTasksThread.h  R3DTriangulationThread.cpp  R3DTriangulationThread.h
src/utils/: CMakeLists.txt  CameraDBLookup.cpp  CameraDBLookup.h  ExifParser.cpp  ExifParser.h  ImageInfo.cpp  ImageInfo.h  OpenCVHelper.cpp  OpenCVHelper.h  OpenMVGExportToMVS.cpp  OpenMVGExportToMVS.h  OpenMVGHelper.cpp  OpenMVGHelper.h  R3DExternalPrograms.cpp  R3DExternalPrograms.h  R3DFontHandler.cpp  R3DFontHandler.h  Regard3DSettings.cpp  Regard3DSettings.h  UserCameraDB.cpp  UserCameraDB.h  matcher_efanna.h  matcher_hnsw.h  matcher_kgraph.h  matcher_mrpt.h
